# rstack

./: Cargo.toml  README.md
resources/: bin.crstack  fib.rstack  fib.stack  fib2.rstack  fib2.stack  fib3.rstack  float_test.rstack
src/: binary.rs  input.rs  instruction.rs  lib.rs  machine.rs  main.rs  output.rs  parser.rs
