[package]
name = "stack"
version = "0.1.0"
authors = ["Gabie <jacadel1998@hotmail.com>"]
edition = "2018"

[[bin]]
name = "rstack"
path = "src/main.rs"

[lib]
name = "rstack"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.3.4"
bounded-vec-deque = "*"
regex = "1"
lazy_static = "1.4.0"
strum = "0.19"
strum_macros = "0.19"
num_enum = "*"

wasm-bindgen = "0.2.63"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false